# rust-cli-panel

./: package.json  pnpm-lock.yaml
src/: App.css  App.tsx  error-page.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: common.rs  main.rs  next.rs  vite.rs
src/components/: CreateNextForm.tsx  CreateViteForm.tsx  NpmGitOptionInput.tsx  Sidebar.tsx
src/constants/: createTypes.ts
src/pages/: CreateFormPage.tsx  IndexPage.tsx
